force-app/main/default/objects/FxRate__c/FxRate__c.object-meta.xml
<CustomObject>
    <label>FxRate</label>
    <nameField>
        <displayFormat>FX - {000000}</displayFormat>
        <label>FxRate</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FxRate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>