force-app/main/default/objects/FxRate__c/fields/Active1__c.field-meta.xml
<CustomField>
    <fullName>Active1__c</fullName>
    <formula>TODAY() &lt;=  End_Date__c</formula>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>