force-app/main/default/objects/FxRate__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active (not used)</label>
    <type>Checkbox</type>
</CustomField>