force-app/main/default/objects/FxRate__c/fields/Active_Durance__c.field-meta.xml
<CustomField>
    <fullName>Active_Durance__c</fullName>
    <label>Active Durance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>