force-app/main/default/objects/FxRate__c/fields/Activeforupdate__c.field-meta.xml
<CustomField>
    <fullName>Activeforupdate__c</fullName>
    <formula>IF ( Active1__c = FALSE, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active (for update)</label>
    <type>Checkbox</type>
</CustomField>