force-app/main/default/objects/FxRate__c/fields/Buying_Ex_Rate_from_Partner_Standard__c.field-meta.xml
<CustomField>
    <fullName>Buying_Ex_Rate_from_Partner_Standard__c</fullName>
    <label>Buying Ex-Rate from Partner-Standard</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>