force-app/main/default/objects/FxRate__c/fields/BuyingFxRatetoUSD__c.field-meta.xml
<CustomField>
    <fullName>BuyingFxRatetoUSD__c</fullName>
    <label>Buying FxRate to USD</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>