force-app/main/default/objects/FxRate__c/fields/BuyingFxRatetoVND__c.field-meta.xml
<CustomField>
    <fullName>BuyingFxRatetoVND__c</fullName>
    <label>Buying FxRate to VND</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>