force-app/main/default/objects/FxRate__c/fields/Ex_Rate_Data_Source_Bank__c.field-meta.xml
<CustomField>
    <fullName>Ex_Rate_Data_Source_Bank__c</fullName>
    <label>Ex-Rate Data Source Bank</label>
    <type>Url</type>
</CustomField>