force-app/main/default/objects/FxRate__c/fields/ExchangeCurrencyFrom1__c.field-meta.xml
<CustomField>
    <fullName>ExchangeCurrencyFrom1__c</fullName>
    <label>Exchange Currency From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>