force-app/main/default/objects/FxRate__c/fields/ExchangeCurrencyFrom__c.field-meta.xml
<CustomField>
    <fullName>ExchangeCurrencyFrom__c</fullName>
    <label>Exchange Currency From (not used)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VND</fullName>
            </value>
            <value>
                <fullName>KHR</fullName>
            </value>
            <value>
                <fullName>JPY</fullName>
            </value>
            <value>
                <fullName>KRW</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>