force-app/main/default/objects/FxRate__c/fields/ExchangeRateType__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRateType__c</fullName>
    <label>Exchange Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tỷ giá buổi sáng của VCB</fullName>
            </value>
            <value>
                <fullName>Tỷ giá trả theo KB</fullName>
            </value>
            <value>
                <fullName>Tỷ giá Vendor</fullName>
            </value>
            <value>
                <fullName>Tỷ giá tính profit cho lô hàng</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>