force-app/main/default/objects/FxRate__c/fields/Selling_FxRate_for_TRS_Customer__c.field-meta.xml
<CustomField>
    <fullName>Selling_FxRate_for_TRS_Customer__c</fullName>
    <label>Selling FxRate for TRS Customer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>