force-app/main/default/objects/FxRate__c/fields/SellingFxRate1__c.field-meta.xml
<CustomField>
    <fullName>SellingFxRate1__c</fullName>
    <label>Selling FxRate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>