force-app/main/default/objects/FxRate__c/fields/SellingFxRatetoUSD__c.field-meta.xml
<CustomField>
    <fullName>SellingFxRatetoUSD__c</fullName>
    <label>Selling FxRate to USD</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>