force-app/main/default/objects/FxRate__c/fields/SellingFxRatetoVND__c.field-meta.xml
<CustomField>
    <fullName>SellingFxRatetoVND__c</fullName>
    <label>Selling FxRate to VND</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>