force-app/main/default/objects/FxRate__c/validationRules/BlankCurrency.validationRule-meta.xml
<ValidationRule>
    <fullName>BlankCurrency</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( TEXT( ExchangeCurrencyFrom1__c ))</errorConditionFormula>
    <errorDisplayField>ExchangeCurrencyFrom1__c</errorDisplayField>
    <errorMessage>Please choose the currency</errorMessage>
</ValidationRule>