force-app/main/default/objects/FxRate__c/validationRules/ValidDate.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidDate</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &lt;  Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date must be greater than Start Date</errorMessage>
</ValidationRule>